# stk

./: .gitignore  CMakeLists.txt
projects/: CMakeLists.txt
projects/demo/: CMakeLists.txt  demo.cpp
projects/effects/: CMakeLists.txt
projects/eguitar/: CMakeLists.txt
projects/examples/: CMakeLists.txt
projects/ragamatic/: CMakeLists.txt
src/: CMakeLists.txt
