macro(example_app name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} stk)
endmacro()


example_app(audioprobe)
example_app(bethree)
example_app(controlbee)
example_app(crtsine)
example_app(duplex)
example_app(foursine)
example_app(grains)
example_app(inetIn)
example_app(midiprobe)
example_app(play)
example_app(playsmf)
example_app(record)
example_app(rtsine)
example_app(sine)
example_app(sineosc)
example_app(threebees)